# MobileWheelsDatabase

./: .gitignore  GITHUB_PAGES_SETUP.md  MANIFEST.in  PHASE1_COMPLETE.md  PLUGIN_README.md  Package.swift  RELEASES.md  USAGE.md  build.sh  db_build_run.sh  db_runner.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build-wasm.yml
Sources/MobileWheelsDatabaseWasm/: IndexDatabases.swift  SQLChunk.swift  SQLChunks.swift  main.swift
Sources/SQLite/: Helpers.swift
Sources/SQLite/Core/: Backup.swift  Connection+Aggregation.swift  Connection+Attach.swift  Connection.swift  Result.swift  Statement.swift
Tests/SQLiteTests/: SQLiteTests.swift
db_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: index.md  package-search.md
docs/assets/: README.md  package-search.js
docs/stylesheets/: extra.css
mkdocs_mobilewheels.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mkdocs_mobilewheels/templates/: search_page.html
mkdocs_mobilewheelsdb/: __init__.py  plugin.py
mkdocs_mobilewheelsdb/assets/: package-search.js
mkdocs_mobilewheelsdb_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mobile-wheels-sql/: README.md  data-15.sqlite
