[project]
name = "mkdocs-mobilewheels"
version = "0.1.0"
description = "MkDocs plugin for Python package compatibility search with WASM-powered SQLite"
readme = "PLUGIN_README.md"
authors = [
    { name = "PythonSwiftLink", email = "pythonswiftlink@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.7.0",
    "pymdown-extensions>=10.3",
]

[project.entry-points."mkdocs.plugins"]
mobilewheels = "mkdocs_mobilewheels.plugin:MobileWheelsPlugin"

[project.scripts]
db-server = "db_runner:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["db_runner"]
packages = ["mkdocs_mobilewheels"]
package-data = { mkdocs_mobilewheels = ["assets/*", "templates/*"] }


